fixed ios notch safe area regarding header overlapping content with transparent background

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -17,6 +17,7 @@ ion-content {
 ion-header.main-header {
   background-color: var(--header-background);
   z-index: 1001;
+  padding-top: env(safe-area-inset-top, 0);
 
   .search-area {
     padding-bottom: 0px;
